--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # -----------------------------------------------------------------------------
 # App
 # -----------------------------------------------------------------------------
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=https://orion.vercel.app
 BASEPATH=
